--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 				<!-- Main -->
 					<div id="main">
-								<a href="#" class="image main"><img src="images/Logo.png" alt="" /></a>
+								<a href="images/Logo.png">
 								<img src="images/About1.png" width="400" height="400"
 									alt="1"
 									style="float: right">
