--- a/Contact.html
+++ b/Contact.html
@@ -77,7 +77,7 @@
 								<!-- Form -->
 								<h2>Other Questions</h2>
 
-								<form method="post" action="contact-form-handler">
+								<form method="post" action="contact-form-handler.php">
 									<div class="row gtr-uniform">
 										<div class="col-6 col-12-xsmall">
 											<input type="text" name="name" id="name" value="" placeholder="Name" />
