--- a/Contact.html
+++ b/Contact.html
@@ -43,7 +43,15 @@
 						<p>We would like to hear from you if you think you might have problems recognising faces. Please register <a href="https://www.faceblind.org/contact/"><b>here</b></a> and we will be in touch for testing and research opportunities.</p>
 						<h3>Join us</h3>
 						<p>We often have positions for curious and committed students. Past and present lab members consist of students at various stages including PhD, MSc, honours (PSYC489), independent study (SCIE306/PSYC440), summer scholar, and research volunteer. Contact us to know more about current openings.</p>						
-
+					
+					<p>Try again.</p>
+						<form class="contact-form" action="contactform.php" method="post">
+							<input type="text" name="name" placeholder="Name">
+							<input type="text" name="mail" placeholder="Email">
+							<input type="text" name="subject" placeholder="Subject">
+							<textarea name="message" placeholder="Message"></textarea>
+							<button type="submit" name="Submit">SEND</button>
+						</form>
 						
 								<!-- Form -->
 								<h2>Other Questions</h2>
