--- a/Contact.html
+++ b/Contact.html
@@ -56,13 +56,13 @@
 								<!-- Form -->
 								<h2>Other Questions</h2>
 
-								<form method="post" action="contact-form-handler.php">
+								<form method="post" action="https://formspree.io/mvowbgg">
 									<div class="row gtr-uniform">
 										<div class="col-6 col-12-xsmall">
 											<input type="text" name="name" id="name" value="" placeholder="Name" />
 										</div>
 										<div class="col-6 col-12-xsmall">
-											<input type="email" name="email" id="email" value="" placeholder="Email" required/>
+											<input type="email" name="_replyto" id="_replyto" placeholder="Email" required/>
 										</div>
 										<!-- Break -->
 										<div class="col-6 col-12-small">
@@ -80,7 +80,7 @@
 										<!-- Break -->
 										<div class="col-12">
 											<ul class="actions">
-												<li><input type="submit" value="Send Message" class="primary" /></li>
+												<li><input type="submit" value="Send" class="primary" /></li>
 												<li><input type="reset" value="Reset" /></li>
 											</ul>
 								</form>
