--- a/Contact.html
+++ b/Contact.html
@@ -59,7 +59,7 @@
 								<form method="post" action="https://formspree.io/mvowbgg">
 									<div class="row gtr-uniform">
 										<div class="col-6 col-12-xsmall">
-											<input type="text" name="name" id="name" value="" placeholder="Name" />
+											<input type="text" name="name" id="name" value="" placeholder="Name1" />
 										</div>
 										<div class="col-6 col-12-xsmall">
 											<input type="email" name="_replyto" id="_replyto" placeholder="Email" required/>
