--- a/Contact.html
+++ b/Contact.html
@@ -56,10 +56,10 @@
 								<!-- Form -->
 								<h2>Other Questions</h2>
 
-								<form method="post" action="https://formspree.io/mvowbgg">
+								<form method="post" action="https://formspree.io/mvowbggr">
 									<div class="row gtr-uniform">
 										<div class="col-6 col-12-xsmall">
-											<input type="text" name="name" id="name" value="" placeholder="Name1" />
+											<input type="text" name="name" id="name" value="" placeholder="Name2" />
 										</div>
 										<div class="col-6 col-12-xsmall">
 											<input type="email" name="_replyto" id="_replyto" placeholder="Email" required/>
