--- a/Contact.html
+++ b/Contact.html
@@ -44,14 +44,6 @@
 						<h3>Join us</h3>
 						<p>We often have positions for curious and committed students. Past and present lab members consist of students at various stages including PhD, MSc, honours (PSYC489), independent study (SCIE306/PSYC440), summer scholar, and research volunteer. Contact us to know more about current openings.</p>						
 					
-					<p>Try again.</p>
-						<form class="contact-form" action="contactform.php" method="post">
-							<input type="text" name="name" placeholder="Name">
-							<input type="text" name="mail" placeholder="Email">
-							<input type="text" name="subject" placeholder="Subject">
-							<textarea name="message" placeholder="Message"></textarea>
-							<button type="submit" name="Submit">SEND</button>
-						</form>
 						
 								<!-- Form -->
 								<h2>Other Questions</h2>
@@ -59,7 +51,7 @@
 								<form method="post" action="https://formspree.io/mvowbggr">
 									<div class="row gtr-uniform">
 										<div class="col-6 col-12-xsmall">
-											<input type="text" name="name" id="name" value="" placeholder="Name2" />
+											<input type="text" name="name" id="name" value="" placeholder="Name" />
 										</div>
 										<div class="col-6 col-12-xsmall">
 											<input type="email" name="_replyto" id="_replyto" placeholder="Email" required/>
@@ -67,11 +59,6 @@
 										<!-- Break -->
 										<div class="col-6 col-12-small">
 											<input type="text" name="subject" id="subject" value="" placeholder="Subject" required/>
-										</div>
-										<!-- Break -->
-										<div class="col-6 col-12-small">
-											<input type="checkbox" id="demo-copy" name="demo-copy">
-											<label for="demo-copy">Email me a copy</label>
 										</div>
 										<!-- Break -->
 										<div class="col-12">
