--- a/People.html
+++ b/People.html
@@ -43,11 +43,11 @@
 						<br><br>
 						<p><span class="image left"><img src="images/Ella.png" alt= /></span> <b>Ella Macaskill | Research Assistant</b> <br> Ella completed her MSc project in the lab in 2021, looking at early visual mechanisms in face processing and prosopagnosia. Ella has worked in the lab as a CBNS rotation student, a summer scholar, and a research volunteer. Ella’s prior projects looked at individual differences in eye movements to natural scenes and the robustness of face recognition to image stretching. Ella holds a BA in psychology and education, and an MSc in Cognitive and Behavioural Neuroscience.</p>
 						<br><br>
-						<p><span class="image left"><img src="images/Lizzie.png" alt= /></span> <b>Lizzie Collyer | MSc Student</b> <br> Lizzie is an MSc student interested what pareidolia faces can tell us about automatic face detection. Lizzie also worked in the lab as a CBNS rotation student and a summer scholar. Lizzie holds a BA in psychology and classics.</p>
+						<p><span class="image left"><img src="images/Lizzie.png" alt= /></span> <b>Lizzie Collyer | MSc Student</b> <br> Lizzie is an MSc student interested what pareidolia faces can tell us about automatic face detection. Lizzie also worked in the lab as a CBNS rotation student and a summer scholar. In her prior studies, Lizzie has looked at visual imagery and rapid eye movements. Lizzie holds a BA in psychology and classics.</p>
 						<br><br>
 						<p><span class="image left"><img src="images/Jaiden.png" alt= /></span> <b>Jaiden Cancian | MSc Student (clinical)</b> <br> Jaiden is an MSc student in the clinical program, interested in face detection in developmental prosopagnoisa. Jaiden was previously a Honours student, SCIE306 student, and a research volunteer. Jaiden's previous research has looked at unconscious face processing and laterality effects in face recognition. Jaiden holds a BSc in psychology and criminology.</p>
 						<br><br>
-						<p><span class="image left"><img src="images/Liam.png" alt= /></span> <b>Liam Crowley | Honours Studentr</b> <br> Liam is interested in pursuing research in visual perception and neuroscience. He is currently exploring potential experiments on holistic processing of faces. Liam has a BA majoring in psychology and philosophy.</p>
+						<p><span class="image left"><img src="images/Liam.png" alt= /></span> <b>Liam Crowley | Honours Student</b> <br> Liam is interested in pursuing research in visual perception and neuroscience. He is currently exploring potential experiments on holistic processing of faces. Liam has a BA majoring in psychology and philosophy.</p>
 						<br><br>
 
 
