--- a/index.html
+++ b/index.html
@@ -26,18 +26,12 @@
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
-
-				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">Vision & Cognition Group</a>
-					</header>
-
+				
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">About</a></li>
 							<li><a href="People.html">People</a></li>
-							<li><a href="Research.html">Research</a></li>
 							<li><a href="Publications.html">Publications</a></li>
 							<li><a href="Prosopagnosia.html">Prosopagnosia</a></li>
 							<li><a href="Contact.html">Contact</a></li>
@@ -50,20 +44,11 @@
 								<img src="images/About1.png" width="400" height="400"
 									alt="1"
 									style="float: right">
-									<p>We are a research group at Victoria University of Wellington led by <a href= "https://people.wgtn.ac.nz/tirta.susilo"><b>Tirta Susilo</b></a>. We primarily work on face perception and prosopagnosia (face blindness) as a model problem for tackling bigger questions about vision and cognition in the brain: How does the brain construct visual experience and allow us to recognise people, places, and objects? How does the visual system work with other cognitive systems to activate memories, generate emotions, and produce actions? What components of brain and cognition are general-purpose, and what components are domain-specific? How do developmental conditions such as prosopagnosia and autism impact brain development and cognitive organisation, and how do rehabilitation efforts come into play?
-									<br><br>
-									Our research combines theories and approaches from vision science, experimental psychology, and cognitive neuroscience. Our methods include behavioural experiments in the lab and on the web, psychophysics, studies of individuals with developmental deficits and brain damage, eye tracking, electroencephalography (EEG), and computational modelling.</p>																		
+									<p>We are a research group in the School of Psychology at Victoria University of Wellington led by <a href= "https://people.wgtn.ac.nz/tirta.susilo"><b>Tirta Susilo</b></a>. We study face and object perception as a model problem for tackling bigger questions about human vision and cognition. We ask question such as how does the brain allow us to recognise faces and objects? What sensory, perceptual, and cognitive mechanisms are involved? Which of these mechanisms are general-purpose, and which are specialised for specific functions? What is the role of experience and expertise in face and object perception?
 									<br>
-									<img src="images/About2.png" width="400" height="400"
-									alt="1"
-									style="float: right">									
-									<p> <b>Why face perception?</b>
-									<br>Face perception is essential to social life. We use faces for recognising people, reading their emotions and mental states, and following their attention. The face perception system interacts with other cognitive systems to guide social behaviour and drive complex actions. Face perception involves dedicated cognitive procedures carried out by a set of brain regions containing face-selective cells. Face perception attracts researchers from psychology, neuroscience, vision science, and computer science, making it a fruitful area for interdisciplinary work. More on research <a href="Research.html"><b>here</b></a>.</p>
-									<img src="images/About3.png" width="450" height="250"
-									alt="1"
-									style="float: right">		
-									<p> <b>Why prosopagnosia?</b>
-									<br>A major focus of our research is prosopagnosia – the inability to recognise faces despite otherwise normal vision and cognition. Prosopagnosia is usually lifelong and caused by developmental or congenital disorder, but in rare cases prosopagnosia can be acquired following brain damage. Understanding prosopagnosia for its own sake is obviously important, but prosopagnosia also provides a powerful means to study how face perception works, and to tackle fundamental issues about organisation, development, and plasticity of vision and cognition. More on prosopagnosia <a href="Prosopagnosia.html"><b>here</b></a>																
+									Our research combines theories and approaches from psychology and neuroscience. Our primary methods include behavioural experiments in the lab, online experiments on the internet, eye tracking, and computational modelling. We work with typical and typical participants across the lifespan. 	
+										
+									<br>A major focus of current research is prosopagnosia – the inability to recognise faces despite otherwise normal vision and cognition. Prosopagnosia is usually lifelong and results from developmental or congenital disorder, but in rare cases prosopagnosia can be acquired following brain damage. We study prosopagnosia for its own sake, but we also use it as a window for understanding normal face perception. More on prosopagnosia <a href="Prosopagnosia.html"><b>here</b></a>																
 					<!-- Copyright -->
 					<div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
