--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 									alt="1"
 									style="float: right">
 									<p>We are a research group in the School of Psychology at Victoria University of Wellington led by <a href= "https://people.wgtn.ac.nz/tirta.susilo"><b>Tirta Susilo</b></a>. We study face and object perception as a model problem for tackling bigger questions about human vision and cognition. We ask question such as how does the brain allow us to recognise faces and objects? What sensory, perceptual, and cognitive mechanisms are involved? Which of these mechanisms are general-purpose, and which are specialised for specific functions? What is the role of experience and expertise in face and object perception?
-									<br>
+									<p>
 									Our research combines theories and approaches from psychology and neuroscience. Our primary methods include behavioural experiments in the lab, online experiments on the internet, eye tracking, and computational modelling. We work with typical and typical participants across the lifespan. 	
 										
-									<br>A major focus of current research is prosopagnosia – the inability to recognise faces despite otherwise normal vision and cognition. Prosopagnosia is usually lifelong and results from developmental or congenital disorder, but in rare cases prosopagnosia can be acquired following brain damage. We study prosopagnosia for its own sake, but we also use it as a window for understanding normal face perception. More on prosopagnosia <a href="Prosopagnosia.html"><b>here</b></a>																
+									<p>A major focus of current research is prosopagnosia – the inability to recognise faces despite otherwise normal vision and cognition. Prosopagnosia is usually lifelong and results from developmental or congenital disorder, but in rare cases prosopagnosia can be acquired following brain damage. We study prosopagnosia for its own sake, but we also use it as a window for understanding normal face perception. More on prosopagnosia <a href="Prosopagnosia.html"><b>here</b></a>																
 					<!-- Copyright -->
 					<div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
