--- a/People.html
+++ b/People.html
@@ -43,9 +43,9 @@
 						<br><br>
 						<p><span class="image left"><img src="images/Jaiden.png" alt= /></span> <b>Jaiden Cancian | MSc Student (Clinical)</b> <br> Jaiden is completing his MSc thesis as part of his clinical training. Jaiden's thesis investigates face detection in developmental prosopagnosia. Jaiden holds a BSc in psychology and criminology.</p>
 						<br><br>
-						<p><span class="image left"><img src="images/Damian.jpg" alt= /></span> <b>Damian Tjiptono | MSc Student (CBNS) </b> <br> Damian is completing her CBNS part 1 training in our group. His research project explores online mouse-tracking to create maps of visual attention to faces and objects. Damian holds a BSc in Psychology.</p>
+						<p><span class="image left"><img src="images/Damian.png" alt= /></span> <b>Damian Tjiptono | MSc Student (CBNS) </b> <br> Damian is completing her CBNS part 1 training in our group. His research project explores online mouse-tracking to create maps of visual attention to faces and objects. Damian holds a BSc in Psychology.</p>
 						<br><br>
-						<p><span class="image left"><img src="images/Veronica.jpg" alt= /></span> <b>Veronica Ellis | MSc Student (CBNS) </b> <br> Veronica is completing her CBNS part 1 training in our group. Her research project uses eye tracking to examine rapid attention to faces and objects. Veronica will continue working on her research as summer scholar and MSc thesis student. Veronica holds a BSc and BCom.</p>
+						<p><span class="image left"><img src="images/Veronica.png" alt= /></span> <b>Veronica Ellis | MSc Student (CBNS) </b> <br> Veronica is completing her CBNS part 1 training in our group. Her research project uses eye tracking to examine rapid attention to faces and objects. Veronica will continue working on her research as summer scholar and MSc thesis student. Veronica holds a BSc and BCom.</p>
 						<br><br>
 						<p><span class="image left"><img src="images/Dayna.png" alt= /></span> <b>Dayna Edge | Research Volunteer </b> <br> Dayna is an undergraduate research volunteer. She has been helping with our recent eye tracking projects and is keen to develop her research interests in our group as summer scholar and MSc or honours student next year. Dayna is completing her GradDip in psychology.</p>
 						<br><br>
