--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 								<img src="images/About1.png" width="400" height="400"
 									alt="1"
 									style="float: right">
-									<p>We are a research group in the School of Psychology at Victoria University of Wellington led by <a href= "https://people.wgtn.ac.nz/tirta.susilo"><b>Tirta Susilo</b></a>. We investigate the mechanisms of human visual perception with a special focus on face and object recognition. We work with theories and methods from experimental psychology and cogntive neuroscience. We run experiments in the laboratory and on the internet with participants across the lifespan, and we use a variety of research tools including computer-based tasks, eye-tracking, and computational modelling. 
-									<p><br>
-									A major focus of our work in recent years is prosopagnosia or face blindness. Prosopagnosia is a condition characterised by selective deficits in face recognition. Prosopagnosia is usually lifelong and results from developmental abnormalities, but in rare cases prosopagnosia can be acquired following specific brain injury. You can find out more about prosopagnosia here<a href="Prosopagnosia.html"><b>here</b></a>																
+									<p>We are a research group in the School of Psychology at Victoria University of Wellington led by <a href= "https://people.wgtn.ac.nz/tirta.susilo"><b>Tirta Susilo</b></a>. Our research aims to understand the mechanisms of human visual perception, with a special focus on face and object recognition. We work with theories and methods from experimental psychology, vision science, and cogntive neuroscience. We run experiments in the laboratory and on the internet with participants across the lifespan, and we use a variety of research tools including computer-based tasks, eye-tracking, and computational modelling.
+										
+									<br>A major focus of our work in recent years is prosopagnosia or face blindness. Prosopagnosia is a condition characterised by selective deficits in face recognition. Prosopagnosia is usually lifelong and results from developmental abnormalities, but in rare cases prosopagnosia can be acquired following specific brain injury. You can find out more about prosopagnosia <a href="Prosopagnosia.html"><b>here</b></a>																
 					<!-- Copyright -->
 					<div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
