--- a/People.html
+++ b/People.html
@@ -41,11 +41,13 @@
 						<br><br>
 						<p><span class="image left"><img src="images/Lizzie.png" alt= /></span> <b>Lizzie Collyer | Research Assistant </b> <br> Lizzie is our lab manager and a senior research assistant working on face and object processing using experimental, eye tracking, and modelling approaches. Lizzie completed her MSc thesis on visual attention to illusory faces. Lizzie holds a BA in psychology and classics.</p>
 						<br><br>
-						<p><span class="image left"><img src="images/Damian.png" alt= /></span> <b>Damian Tjiptono | MSc Student (CBNS) </b> <br> Damian is completing her CBNS part 1 training in our group. His research project explores online mouse-tracking to create maps of visual attention to faces and objects. Damian holds a BSc in Psychology.</p>
+						<p><span class="image left"><img src="images/Damian.png" alt= /></span> <b>Damian Tjiptono | MSc Student (CBNS) </b> <br> Damian is completing her CBNS part 1 training in our group. His research project explores online mouse-tracking to create maps of visual attention to faces and objects. Damian will continue his reseach as MSc thesis student. Damian holds a BSc in Psychology.</p>
 						<br><br>
-						<p><span class="image left"><img src="images/Veronica.png" alt= /></span> <b>Veronica Ellis | MSc Student (CBNS) </b> <br> Veronica is completing her CBNS part 1 training in our group. Her research project uses eye tracking to examine rapid attention to faces and objects. Veronica will continue working on her research as summer scholar and MSc thesis student. Veronica holds a BSc and BCom.</p>
+						<p><span class="image left"><img src="images/Veronica.png" alt= /></span> <b>Veronica Ellis | MSc Student (CBNS) </b> <br> Veronica is completing her CBNS part 1 training in our group. Her research project uses eye tracking to examine rapid attention to faces and objects. Veronica will continue her research as summer scholar and MSc thesis student. Veronica holds a BSc and BCom.</p>
 						<br><br>
 						<p><span class="image left"><img src="images/Dayna.png" alt= /></span> <b>Dayna Edge | Research Volunteer </b> <br> Dayna is an undergraduate research volunteer. She has been helping with our recent eye tracking projects and is keen to develop her research interests in our group as summer scholar and MSc or honours student next year. Dayna is completing her GradDip in psychology.</p>
+						<br><br>
+						<p><span class="image left"><img src="images/placeholder.png" alt= /></span> <b>Jaime Linton | Research Volunteer </b> <br> Jaime is an undergraduate research volunteer. She is keen to experience research in cognitive science and contribute to various projects in our group. Jaime is an upcoming third-year student in psychology.</p>
 						<br><br>
 						
 				<!-- Copyright -->
