--- a/People.html
+++ b/People.html
@@ -47,7 +47,7 @@
 						<br><br>
 						<p><span class="image left"><img src="images/Dayna.png" alt= /></span> <b>Dayna Edge | Research Volunteer </b> <br> Dayna is an undergraduate research volunteer. She has been helping with our recent eye tracking projects and is keen to develop her research interests in our group as summer scholar and MSc or honours student next year. Dayna is completing her GradDip in psychology.</p>
 						<br><br>
-						<p><span class="image left"><img src="images/placeholder.png" alt= /></span> <b>Jaime Linton | Research Volunteer </b> <br> Jaime is an undergraduate research volunteer. She is keen to experience research in cognitive science and contribute to various projects in our group. Jaime is an upcoming third-year student in psychology.</p>
+						<p><span class="image left"><img src="images/Jaime.png" alt= /></span> <b>Jaime Linton | Research Volunteer </b> <br> Jaime is an undergraduate research volunteer. She is keen to experience research in cognitive science and contribute to various projects in our group. Jaime is an upcoming third-year student in psychology.</p>
 						<br><br>
 						
 				<!-- Copyright -->
