--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 								<img src="images/About1.png" width="400" height="400"
 									alt="1"
 									style="float: right">
-									<p>We are a research group in the School of Psychology at Victoria University of Wellington led by <a href= "https://people.wgtn.ac.nz/tirta.susilo"><b>Tirta Susilo</b></a>. Our research aims to understand the mechanisms of human visual perception, with a special focus on face and object recognition. We work with theories and methods from experimental psychology, vision science, and cogntive neuroscience. We run experiments in the laboratory and on the internet with participants across the lifespan, and we use a variety of research tools including computer-based tasks, eye-tracking, and computational modelling.
+									<p>We are a research group in the School of Psychology at Victoria University of Wellington led by <a href= "https://people.wgtn.ac.nz/tirta.susilo"><b>Tirta Susilo</b></a>. We study the mechanisms of human visual perception, with a focus on face and object recognition. We work with theories and methods from experimental psychology, vision science, and cogntive neuroscience, and we run experiments in the laboratory and on the internet with participants from typical and atypical populations across the lifespan.
 										
-									<br>A major focus of our work in recent years is prosopagnosia or face blindness. Prosopagnosia is a condition characterised by selective deficits in face recognition. Prosopagnosia is usually lifelong and results from developmental abnormalities, but in rare cases prosopagnosia can be acquired following specific brain injury. You can find out more about prosopagnosia <a href="Prosopagnosia.html"><b>here</b></a>																
+									<br>A major area topic of our research is prosopagnosia or face blindness, a visual perception disorder characterised by selective deficits in face recognition. The most common type of prosopagnosia is lifelong or developmental, which results from failures to develop necessary mechanisms for face perception. Occasionally prosopagnosia can be acquired following brain damage or injury. You can find out more about prosopagnosia <a href="Prosopagnosia.html"><b>here</b></a>																
 					<!-- Copyright -->
 					<div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
