--- a/People.html
+++ b/People.html
@@ -37,9 +37,9 @@
 
 				<!-- Main -->
 					<div id="main">
-						<p><span class="image left"><img src="images/Tirta.png" alt= /></span> <b>Tirta Susilo | Group Leader</b> <br> Tirta is senior lecturer in the School of Psychology and director of the Cognitive and Behavioural Neuroscience (CBNS) programme. Tirta’s research expertise is perception, cognition, and neuroscience, with a special focus on face processing and prosopagnosia (faceblindness). [<a href="https://people.wgtn.ac.nz/tirta.susilo">Homepage</a>] [<a href = "mailto: tirta.susilo@vuw.ac.nz">Email</a>]</p>
+						<p><span class="image left"><img src="images/Tirta.png" alt= /></span> <b>Tirta Susilo | Group Leader</b> <br> Tirta is senior lecturer in the School of Psychology at Victoria University of Wellington. His research expertise is perception, cognition, and neuroscience, with a focus on face recognition and prosopagnosia or face blindness. [<a href="https://people.wgtn.ac.nz/tirta.susilo">Homepage</a>] [<a href = "mailto: tirta.susilo@vuw.ac.nz">Email</a>]</p>
 						<br><br>
-						<p><span class="image left"><img src="images/Lizzie.png" alt= /></span> <b>Lizzie Collyer | Research Assistant </b> <br> Lizzie is our lab manager and a senior research assistant working on face and object processing using experimental, eye tracking, and modelling approaches. Lizzie completed her MSc thesis on visual attention to illusory faces. Lizzie holds a BA in psychology and classics.</p>
+						<p><span class="image left"><img src="images/Lizzie.png" alt= /></span> <b>Lizzie Collyer | Research Assistant </b> <br> Lizzie is our lab manager and a senior research assistant working on face and object processing using experimental, eye tracking, and modelling approaches. Lizzie completed her MSc thesis on visual attention to illusory faces and is currently working to improve the diagnosis of developmental prosopagnosia.</p>
 						<br><br>
 						<p><span class="image left"><img src="images/Damian.png" alt= /></span> <b>Damian Tjiptono | MSc Student (CBNS) </b> <br> Damian is completing her CBNS part 1 training in our group. His research project explores online mouse-tracking to create maps of visual attention to faces and objects. Damian will continue his reseach as MSc thesis student. Damian holds a BSc in Psychology.</p>
 						<br><br>
