--- a/People.html
+++ b/People.html
@@ -36,13 +36,13 @@
 
 				<!-- Main -->
 					<div id="main">
-						<p><span class="image left"><img src="images/Tirta.png" alt= /></span> <b>Tirta Susilo | Group Leader</b> <br> Tirta is senior lecturer in the School of Psychology at Victoria University of Wellington. His research expertise is perception, cognition, and neuroscience, with a focus on face recognition and prosopagnosia or face blindness. [<a href="https://people.wgtn.ac.nz/tirta.susilo">Homepage</a>] [<a href = "mailto: tirta.susilo@vuw.ac.nz">Email</a>]</p>
+						<p><span class="image left"><img src="images/Tirta.png" alt= /></span> <b>Tirta Susilo | Group Leader</b> <br> Tirta is senior lecturer in the School of Psychology at Victoria University of Wellington. His research expertise is perception, cognition, and neuroscience, with a focus on face recognition and prosopagnosia. [<a href="https://people.wgtn.ac.nz/tirta.susilo">Homepage</a>] [<a href = "mailto: tirta.susilo@vuw.ac.nz">Email</a>]</p>
 						<br><br>
-						<p><span class="image left"><img src="images/Lizzie.png" alt= /></span> <b>Lizzie Collyer | Research Assistant </b> <br> Lizzie is our lab manager and a senior research assistant working on face and object processing using experimental, eye tracking, and modelling approaches. Lizzie completed her MSc thesis on visual attention to illusory faces and is currently working to improve the diagnosis of developmental prosopagnosia.</p>
+						<p><span class="image left"><img src="images/Lizzie.png" alt= /></span> <b>Lizzie Collyer | Research Assistant </b> <br> Lizzie is a senior research assistant working to improve the diagnosis of prosopagnosia. Lizzie completed her Masters thesis on attention to illusory faces.</p>
 						<br><br>
-						<p><span class="image left"><img src="images/Damian.png" alt= /></span> <b>Damian Tjiptono | MSc Student (CBNS) </b> <br> Damian is completing her CBNS part 1 training in our group. His research project explores online mouse-tracking to create maps of visual attention to faces and objects. Damian will continue his reseach as MSc thesis student. Damian holds a BSc in Psychology.</p>
+						<p><span class="image left"><img src="images/Vai.png" alt= /></span> <b>Vai Bhana | MSc Student </b> <br> Vai is completing her Masters thesis in the lab. She is exploring the relationship between visual imagery and face recognition using an individual differences approach. </p>
 						<br><br>
-						<p><span class="image left"><img src="images/Veronica.png" alt= /></span> <b>Veronica Ellis | MSc Student (CBNS) </b> <br> Veronica is completing her CBNS part 1 training in our group. Her research project uses eye tracking to examine rapid attention to faces and objects. Veronica will continue her research as summer scholar and MSc thesis student. Veronica holds a BSc and BCom.</p>
+						<p><span class="image left"><img src="images/Pacey.png" alt= /></span> <b>Pacey Soane | Honours Student </b> <br> Pacey is completing his honours thesis on repetition blindness for faces and illusory faces.</p>
 						<br><br>
 						
 				<!-- Copyright -->
