--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 								<img src="images/About1.png" width="400" height="400"
 									alt="1"
 									style="float: right">
-									<p>We are a research group in the School of Psychology at Victoria University of Wellington led by <a href= "https://people.wgtn.ac.nz/tirta.susilo"><b>Tirta Susilo</b></a>. We study the mechanisms of human visual perception, with a focus on face and object recognition. We work with theories and methods from experimental psychology, vision science, and cogntive neuroscience, and we run experiments in the laboratory and on the internet with participants from typical and atypical populations across the lifespan.
+									<p>We are a research group in the School of Psychology at Victoria University of Wellington led by <a href= "https://people.wgtn.ac.nz/tirta.susilo"><b>Tirta Susilo</b></a>. We study the mechanisms of human visual perception, with a focus on face and object recognition. We work with theories and methods from experimental psychology, vision science, and cogntive neuroscience, and we run experiments in the laboratory and on the internet with participants from typical and atypical populations across the lifespan.</p>
 										
 									<p>A major topic of our research is prosopagnosia or face blindness. Prosopagnosia is a visual perception disorder characterised by selective deficits in face recognition despite otherwise normal vision, memory, and intellect. The most common type of prosopagnosia is developmental, which results from failures to develop necessary mechanisms for face perception, but occasionally prosopagnosia can be acquired following brain damage or injury. You can find out more about prosopagnosia <a href="Prosopagnosia.html"><b>here.</b></a>																
 					<!-- Copyright -->
