--- a/People.html
+++ b/People.html
@@ -36,13 +36,13 @@
 
 				<!-- Main -->
 					<div id="main">
-						<p><span class="image left"><img src="images/Tirta.png" alt= /></span> <b>Tirta Susilo | Group Leader</b> <br> Tirta is senior lecturer in the School of Psychology at Victoria University of Wellington. His research expertise is perception, cognition, and neuroscience, with a focus on face recognition and prosopagnosia. [<a href="https://people.wgtn.ac.nz/tirta.susilo">Homepage</a>] [<a href = "mailto: tirta.susilo@vuw.ac.nz">Email</a>]</p>
+						<p><span class="image left"><img src="images/Tirta.png" alt= /></span> <b>Tirta Susilo | Group Leader</b> <br> Tirta is an Associate Professor in Psychology at Victoria University of Wellington. His research expertise is perception, cognition, and neuroscience, with a focus on face perception and its disorders in prosopagnosia. Tirta has 15+ years of research experience in NZ, Australia, and the US. He has worked on many topics beyond face perception including object recognition, word recognition, body recognition, synaesthesia, autism, and theory of mind [<a href="https://people.wgtn.ac.nz/tirta.susilo">Homepage</a>] [<a href = "mailto: tirta.susilo@vuw.ac.nz">Email</a>]</p>
 						<br><br>
-						<p><span class="image left"><img src="images/Lizzie.png" alt= /></span> <b>Lizzie Collyer | Research Assistant </b> <br> Lizzie is a senior research assistant working to improve the diagnosis of prosopagnosia. Lizzie completed her Masters thesis on attention to illusory faces.</p>
+						<p><span class="image left"><img src="images/Lizzie.png" alt= /></span> <b>Lizzie Collyer | Research Assistant </b> <br> Lizzie is a research assistant working to improve the diagnosis of prosopagnosia. Lizzie completed her Masters thesis on visual attention to illusory faces and has worked on various projects in the lab both with typical participants and those with prosopagnosia.</p>
 						<br><br>
-						<p><span class="image left"><img src="images/Vai.png" alt= /></span> <b>Vai Bhana | MSc Student </b> <br> Vai is completing her Masters thesis in the lab. She is exploring the relationship between visual imagery and face recognition using an individual differences approach. </p>
+						<p><span class="image left"><img src="images/Vai.png" alt= /></span> <b>Vai Bhana | MSc Student </b> <br> Vai is completing her Masters project. The project explores the relationship between visual imagery abilities and face recognition skills using an individual differences approach, with a focus on face processing under sensory uncertainty and minimal information. </p>
 						<br><br>
-						<p><span class="image left"><img src="images/Pacey.png" alt= /></span> <b>Pacey Soane | Honours Student </b> <br> Pacey is completing his honours thesis on repetition blindness for faces and illusory faces.</p>
+						<p><span class="image left"><img src="images/Pacey.png" alt= /></span> <b>Pacey Soane | MSc Student </b> <br> Pacey is doing his MSc project looking at visual attention to faces under sensory uncertainty and minimal information. Pacey completed his honours project on repetition blindness to faces and is currently training to be a clinical psychologist.</p>
 						<br><br>
 						
 				<!-- Copyright -->
